[gd_scene load_steps=4 format=3 uid="uid://df8ep1r4hi20w"]

[ext_resource type="Texture2D" uid="uid://b6pd1i77cypav" path="res://art/bookSprite.png" id="1_3mi6y"]
[ext_resource type="Script" path="res://book.gd" id="1_jkbfg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uji3j"]
size = Vector2(16, 16)

[node name="book" type="RigidBody2D"]
gravity_scale = 0.2
script = ExtResource("1_jkbfg")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(24, 16)
texture = ExtResource("1_3mi6y")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(24, 16)
scale = Vector2(0.825, 0.9)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(24, 16)
shape = SubResource("RectangleShape2D_uji3j")

[connection signal="BookGrabbed" from="." to="." method="_on_book_grabbed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
